# text_checker

./: Makefile  README.md  pyproject.toml
text_checker/: main.py  tests.py
