[tool.poetry]
name = "text-checker"
version = "0.1.0"
description = ""
authors = ["Dm1triiSmirnov <smirnov0719@gmail.com>"]
readme = "README.md"
packages = [{include = "text_checker"}]

[tool.poetry.dependencies]
python = "^3.11"
emoji = "^2.5.0"
pytest = "^7.3.2"
pymorphy3 = "^1.2.0"


[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
isort = "^5.12.0"
flake8 = "^6.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
